--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './components/input.scss';
+@import './components/button.scss';
+@import './components/card.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,6 +13,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply text-base;
+  @apply font-serif;
 }
 
 code {
