--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,18 +1,19 @@
+@import './components/input';
+@import './components/button';
+@import './components/card';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import './components/input.scss';
-@import './components/button.scss';
-@import './components/card.scss';
-
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   @apply text-base;
   @apply font-serif;
 }
